--- a/index.html
+++ b/index.html
@@ -2,18 +2,47 @@
 <html>
 
 <head>
-<link rel= "stylesheet" href= "https://tapioka-site.f5.si/css/style.css"></link>
+<style>
+body{
+ background-image:url("https://tapioka-site.f5.si/img/icon/TWR-Card.png");
+ text-align: center;
+ align-items: center;
+}
+
+button{
+ border-radius: 13px;
+ border: soild darkgray;
+ padding: 14px;
+ color: white;
+ font-weight: 900;
+}
+
+button:hover{
+ border-radius: 13px;
+ border: soild black;
+ padding: 14px;
+ color: white;
+ font-weight: 900;
+}
+
+.Title{
+ font-weight: 900;
+}
+</style>
 <link rel= "icon" href= "https://tapioka-site.f5.si/img/icon/tapioka-icon.png"></link>
 
 <meta http-equiv="x-ua-compatible" content="IE=edge">
 <meta name= "viewport" content= "width=device-width">
 <meta charset= "Shift_JIS">
 
-<title>TAPIのゲーム製作所</title>
+<title>REDEEM GIFT-CODE</title>
 </head>
 
 <body>
-<h1 class= "BackGround-Black">ようこそ！</h1>
+<h1 class= "Title">Wellcome !</h1>
+<p style= "color:red;">- There are currently no codes available for redeeming. -</p>
+<input type= "text" value= "CODE Here.."> &emsp; <button onclick= "Redeem()">Redeem</button> <br>
+
 </body>
 
 </html>
