--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@ body{
 }
 
 button{
+ background-color: dakrgray;
  border-radius: 13px;
- border: soild darkgray;
+ border: soild black;
  padding: 14px;
  color: white;
  font-weight: 900;
 }
 
 button:hover{
+ background-color: black;
  border-radius: 13px;
  border: soild black;
  padding: 14px;
