--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
 <style>
 body{
- background-image:url("https://tapioka-site.f5.si/img/icon/TWR-Card.png");
- background-size: cover;
+ background-color: silver;
  text-align: center;
  align-items: center;
 }
 
 button{
- background-color: dakrgray;
+ background-color: darkgray;
  border-radius: 13px;
  border: soild black;
  padding: 14px;
