--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ var code = "There are currently no codes available for redeeming.";
 function Redeem(){
 if(code === "There are currently no codes available for redeeming."){
  alert("There are currently no codes available for redeeming.");
-}else(){
+}else{
  RedeemCode.innerHTML = code;
 };
 };
