--- a/index.html
+++ b/index.html
@@ -2,36 +2,8 @@
 <html>
 
 <head>
-<style>
-body{
- background-color: silver;
- text-align: center;
- align-items: center;
-}
-
-button{
- background-color: darkgray;
- border-radius: 13px;
- border: soild black;
- padding: 14px;
- color: white;
- font-weight: 900;
-}
-
-button:hover{
- background-color: black;
- border-radius: 13px;
- border: soild black;
- padding: 14px;
- color: white;
- font-weight: 900;
-}
-
-.Title{
- font-weight: 900;
-}
-</style>
-<link rel= "icon" href= "https://tapioka-site.f5.si/img/icon/tapioka-icon.png"></link>
+<link rel= "stylesheet" href= "https://tapioka-site.f5.si/css/style.css">
+<link rel= "icon" href= "https://tapioka-site.f5.si/img/icon/tapioka-icon.png">
 
 <meta http-equiv="x-ua-compatible" content="IE=edge">
 <meta name= "viewport" content= "width=device-width">
