--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<h1 class= "Title">Wellcome !</h1>
+<h1 class= "BackGround-Black">Welcome !!</h1>
 <p id= "RedeemCode" style= "color:red;">- There are currently no codes available for redeeming. -</p>
 <input id= "Code" type= "text" value= "CODE Here.."> &emsp; <button onclick= "Redeem()">Redeem</button> <br>
 <script>
